@@ -9,6 +9,7 @@ Version 8.10 (Unreleased)
 - ``SENTRY_FILESTORE`` deprecated and replaced with ``filestore.backend``
 - ``SENTRY_FILESTORE_OPTIONS`` deprecated and replaced with ``filestore.options``
 - Add watchOS support for cocoa interface.
+- Ignore a ``null`` ``Origin`` header for authentication.
 
 API Changes
 ~~~~~~~~~~~
